# termstage

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml
.agents/skills/impl/: SKILL.md
.agents/skills/spec/: SKILL.md
apps/server/: Cargo.toml
apps/server/src/: assets.rs  cli.rs  local_terminal.rs  main.rs  settings.rs  tunnel_ws.rs  web.rs
apps/server/web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/server/web/src/: connection-status.ts  main.ts  presentation.ts  resize.ts  settings.ts  socket.ts  style.css  terminal.ts  viewport.ts
apps/server/web/src/assets/fonts/: NOTICE.md
apps/server/web/tests/: smoke.spec.ts
crates/core/: Cargo.toml
crates/core/src/: backend.rs  lib.rs  operation_lock.rs  protocol.rs  rmux_backend.rs  runtime.rs  security.rs  session_gateway.rs  session_registry.rs  settings.rs  tmux_backend.rs  tunnel.rs
docs/: index.md
docs/guides/: developer-guide.md  user-guide.md
docs/research/: browser-terminal-phase-0-validation.md  study-rmux-sdk-alignment.md
specs/: 00-browser-terminal-prd.md  10-browser-terminal-protocol-design.md  11-browser-terminal-runtime-design.md  20-browser-terminal-web-design.md  21-browser-terminal-public-exposure-design.md  22-browser-terminal-base-path-design.md  23-local-remote-command-lease-design.md  24-runtime-tunnel-architecture-design.md  25-rmux-backend-adapter-design.md  50-browser-terminal-cli-design.md  61-browser-terminal-crates-and-features.md  70-browser-terminal-security-design.md  72-browser-terminal-verification-plan.md  80-browser-terminal-glossary.md  90-browser-terminal-roadmap.md  91-browser-terminal-impl-plan.md  99-browser-terminal-key-decisions.md  index.md
