[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/presenterm"
repository = "https://github.com/tyrchen/presenterm"
homepage = "https://github.com/tyrchen/presenterm"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
getrandom = "0.4.2"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
url = "2.5.8"
which = "8.0.2"

# workspace crates
presenterm-core = { path = "crates/core" }

[workspace.lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "forbid"
