[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.2.2"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
documentation = "https://docs.rs/termstage"
repository = "https://github.com/tyrchen/termstage"
homepage = "https://github.com/tyrchen/termstage"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", default-features = false, features = [
  "http1",
  "json",
  "query",
  "tokio",
  "ws",
] }
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3.32", features = ["sink"] }
getrandom = "0.4.2"
http-body-util = "0.1.3"
open = "5.3.5"
portable-pty = "0.9.0"
rustix = { version = "1.1.4", features = ["process"] }
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio-tungstenite = "0.29.0"
tokio = { version = "1.52", features = [
  "net",
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
  "sync",
  "time",
] }
tower = "0.5.3"
tower-http = { version = "0.6.11", default-features = false, features = [
  "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
which = "8.0.2"

# workspace crates
termstage-core = { version = "0.2.2", path = "crates/core" }

[workspace.lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "forbid"
