[package]
name = "presenterm-server"
description = """

"""
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
presenterm-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
