[package]
name = "presenterm-server"
description = """

"""
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "presenterm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
open.workspace = true
presenterm-core.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true

[lints]
workspace = true
