[package]
name = "termstage"
description = "Local browser terminal presentation tool for live demos."
categories = ["command-line-utilities", "development-tools"]
keywords = ["terminal", "presentation", "browser", "tmux", "websocket"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "termstage"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
open.workspace = true
termstage-core.workspace = true
rustix.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio-tungstenite.workspace = true
tower.workspace = true

[lints]
workspace = true
