[package]
name = "termstage-core"
description = "Core protocol, security, and runtime primitives for termstage."
categories = ["development-tools"]
keywords = ["terminal", "presentation", "pty", "tmux", "websocket"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation = "https://docs.rs/termstage-core"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
backend-rmux = ["dep:rmux-sdk"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
getrandom.workspace = true
portable-pty.workspace = true
rmux-sdk = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
which.workspace = true

[lints]
workspace = true
